# anchor-foundry

./: .dockerignore  .gitignore  STATUS.md  package-lock.json  package.json
apps/api/: Dockerfile  dev_server.py  requirements-dev.txt  requirements.txt
apps/api/src/: main.py
apps/api/src/lib/: config.py  cron.py  db.py  errors.py
apps/api/src/middleware/: auth.py  permissions.py
apps/api/src/routes/: actions.py  auth.py  canvas.py  connections.py  datasets.py  models.py  objects.py  org.py  projects.py  workspaces.py
apps/api/src/services/: actions.py  audit.py  canvas.py  connections.py  connectors.py  dataset_engine.py  datasets.py  instance_store.py  instances.py  models.py  orgs.py  (+6 more)
apps/api/tests/: test_actions.py  test_api.py  test_canvas.py  test_connections.py  test_datasets.py  test_models.py  test_objects.py  test_scheduled_sync.py  test_sync.py
apps/control-plane/tests/: test_control_plane.py
apps/web/: .env.local  Dockerfile  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/worker/: Dockerfile  pyproject.toml  requirements.txt
apps/worker/src/anchor_worker/: __init__.py  dataset_engine.py  definitions.py  python_sandbox.py  resources.py  storage.py
apps/worker/src/anchor_worker/jobs/: cleanup.py  instance_syncs.py  model_runs.py  sync_configs.py
apps/worker/tests/: test_cleanup.py  test_instance_syncs.py  test_model_runs.py  test_python_sandbox.py  test_sync_configs.py
infra/cdk/: cdk.json  package-lock.json  package.json  tsconfig.json
infra/cdk/bootstrap/: customer-bootstrap.yaml
infra/cdk/src/: app.ts
(+37 files in other folders)
