[project]
name = "anchor-worker"
version = "0.1.0"
description = "Anchor background worker: Dagster jobs for cleanup, sync, and pipelines."
requires-python = ">=3.12"
dependencies = [
    "dagster==1.7.12",
    "psycopg[binary]==3.2.1",
    "duckdb==1.0.0",
    "pandas==2.2.2",
    "pytz==2024.1",
    "boto3==1.34.144",
    "croniter==2.0.5",
]

[tool.dagster]
module_name = "anchor_worker.definitions"
